# morrowind-nexus-lua-dump

./: .gitignore  README.md  index.json  lua_dump.spec  mypy.ini  pyproject.toml
lua/(OpenMW) Night Patrol/Optional File-58553-1-0-1775144129/: nightpatrol_guard.lua
lua/(OpenMW) Yet Another HUD/Yet Another HUD Enemy Fatigue Patch-58505-1-0-1775056198/: hud_enemy.lua
lua/(TES3MP) Custom Player Quests/Custom Player Quests-52293-1-01-1675742199/: AotS_Quests.lua
lua/(TES3MP) Regional Bounties/Regional Bounties-51097-1-0-1651531562/: regionalBounties.lua
lua/(TES3MP) Riders for Players/Riders for Players-51056-1-0-1651361763/: AotS_Riders.lua
lua/(TES3MP) Sailable Ships/Sailable Ships 1.02-52772-1-02-1684427397/: AotS_Ships.lua
lua/(TES3MP) Sailable Ships/Sailable Ships-52772-1-01-1683047820/: AotS_Ships.lua
lua/4NM - Total Gameplay Overhaul/4nm_dump-47015-1-1619345080/: 4nm_dump.lua
lua/4NM - Total Gameplay Overhaul/4nm_dump-47015-2-1626119842/: 4nm_dump.lua
lua/4NM - Total Gameplay Overhaul/4nm_dump-47015-3-1-1634648495/: 4nm_dump.lua
lua/4NM - Total Gameplay Overhaul/4nm_dump-47015-3-18-1649691032/: 4nm_dump.lua
lua/A Fox's Den of Mods and Patches/Impact Effects and Saplings Patch-58227-1-0-1771108157/: oaab.lua
lua/A Fox's Den of Mods and Patches/Visually Filled Soul Gems for OpenMW Patch-58227-1-0-1771108119/: ChangeSoulGemOMW_GLO.lua
lua/Attend Me/AttendMe_1.6-51232-1-6-1688235078/: scripts\AttendMe\actor.lua  scripts\AttendMe\global.lua  scripts\AttendMe\hud.lua  scripts\AttendMe\player.lua
lua/Auto Sheathe Before Drawing (OpenMW)/Weapons Sheath When Equip Change Openmw 1.0.0-59001-1-1778861494/: scripts\weapons_sheath_openmw\player.lua
lua/Auto Sheathe Before Drawing/Weapons Sheath When Equip Change 1.0.0-58895-1-1777998170/: Weapons Sheath When Equip Change 1.0.0\MWSE\mods\weapons_sheath_when_equip_change\config.lua  (+3 more)
lua/Buying Game Config/buyinggameconfig.7z-53737-1-1-1700345010/: config.lua
lua_dump/: __init__.py  __main__.py  extract.py  logger.py  lua_index.py  morrowind_nexus.py
tests/: test_lua_index.py
(+21753 files in other folders)
