[tool.poetry]
name = "lua_dump"
version = "0.1.0"
description = ""
authors = ["Greatness7 <Greatness7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
aiolimiter = "^1.0.0-beta.1"
aionexusmods = { git = "https://github.com/Greatness7/aionexusmods.git" }
loguru = "^0.5.3"
patool = "^1.12"
pydantic = "^1.8.1"
pyinstaller = "^4.3"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
